--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     },
     "autoload": {
         "psr-4": {
-            "Decorate\\DecorateCommands\\JsModelMakeCommand\\": "src/",
-            "Decorate\\DecorateCommands\\JsModelMakeCommand\\Providers\\": "src/Providers",
+            "Decorate\\DecorateCommands\\": "src/",
+            "Decorate\\DecorateCommands\\Providers\\": "src/Providers",
             "Test\\": "tests"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Decorate\\DecorateCommands\\JsModelMakeCommand\\Providers\\JsModelMakeServiceProvider"
+                "Decorate\\DecorateCommands\\Providers\\JsModelMakeServiceProvider"
             ]
         }
     },
