--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,10 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": "vendor/bin/phpunit"
+    },
+    "config": {
+        "sort-packages": true,
         "vendor-dir": "decorate"
     },
     "minimum-stability": "dev"
