--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,7 @@
         "test": "vendor/bin/phpunit"
     },
     "config": {
-        "sort-packages": true,
-        "vendor-dir": "decorate"
+        "sort-packages": true
     },
     "minimum-stability": "dev"
 }
